@@ -171,7 +171,8 @@ public class OrderPostProcessingEventHandlerTest extends DiAbstractRestTest {
     createPieceAndTitle(mockPoLine);
 
     DataImportEventPayload dataImportEventPayload = new DataImportEventPayload()
-      .withCurrentNode(profileSnapshotWrapper.getChildSnapshotWrappers().get(0).getChildSnapshotWrappers().get(0))
+      .withJobExecutionId(UUID.randomUUID().toString())
+      .withCurrentNode(profileSnapshotWrapper.getChildSnapshotWrappers().getFirst().getChildSnapshotWrappers().getFirst())
       .withEventType(DI_ORDER_CREATED_READY_FOR_POST_PROCESSING.value())
       .withTenant(TENANT_ID)
       .withOkapiUrl(OKAPI_URL)
@@ -197,12 +198,12 @@ public class OrderPostProcessingEventHandlerTest extends DiAbstractRestTest {
 
     // then
     DataImportEventPayload eventPayload = observeEvent(DI_COMPLETED.value());
-    assertEquals(DI_ORDER_CREATED.value(), eventPayload.getEventsChain().get(eventPayload.getEventsChain().size() - 1));
+    assertEquals(DI_ORDER_CREATED.value(), eventPayload.getEventsChain().getLast());
     verifyPoLine(eventPayload);
 
     // verifies that request was performed to update po line with instance id
     List<JsonObject> updatedPoLines = MockServer.getRqRsEntries(HttpMethod.PUT, PO_LINES_STORAGE);
-    PoLine updatedPoLine = updatedPoLines.get(0).mapTo(PoLine.class);
+    PoLine updatedPoLine = updatedPoLines.getFirst().mapTo(PoLine.class);
     assertEquals(instanceJson.getString(ID_FIELD), updatedPoLine.getInstanceId());
 
     assertNull(getCreatedInstances());
@@ -211,13 +212,13 @@ public class OrderPostProcessingEventHandlerTest extends DiAbstractRestTest {
 
     List<JsonObject> createdPieces = getCreatedPiecesBatch();
     assertEquals(1, createdPieces.size());
-    Piece piece = createdPieces.get(0).mapTo(PieceCollection.class).getPieces().get(0);
+    Piece piece = createdPieces.getFirst().mapTo(PieceCollection.class).getPieces().getFirst();
     assertEquals(poLine.getId(), piece.getPoLineId());
     assertEquals(itemJson.getString(ID), piece.getItemId());
 
     List<JsonObject> ordersResp = getPurchaseOrderUpdates();
     assertFalse(ordersResp.isEmpty());
-    CompositePurchaseOrder openedOrder = ordersResp.get(0).mapTo(CompositePurchaseOrder.class);
+    CompositePurchaseOrder openedOrder = ordersResp.getFirst().mapTo(CompositePurchaseOrder.class);
     assertEquals(order.getId(), openedOrder.getId());
     assertEquals(WorkflowStatus.OPEN, openedOrder.getWorkflowStatus());
 
@@ -233,7 +234,8 @@ public class OrderPostProcessingEventHandlerTest extends DiAbstractRestTest {
     addMockEntry(JOB_PROFILE_SNAPSHOTS_MOCK, profileSnapshotWrapper);
 
     DataImportEventPayload dataImportEventPayload = new DataImportEventPayload()
-      .withCurrentNode(profileSnapshotWrapper.getChildSnapshotWrappers().get(0).getChildSnapshotWrappers().get(0))
+      .withJobExecutionId(UUID.randomUUID().toString())
+      .withCurrentNode(profileSnapshotWrapper.getChildSnapshotWrappers().getFirst().getChildSnapshotWrappers().getFirst())
       .withEventType(DI_ORDER_CREATED_READY_FOR_POST_PROCESSING.value())
       .withTenant(TENANT_ID)
       .withOkapiUrl(OKAPI_URL)
@@ -258,7 +260,7 @@ public class OrderPostProcessingEventHandlerTest extends DiAbstractRestTest {
 
     // then
     DataImportEventPayload eventPayload = observeEvent(DI_COMPLETED.value());
-    assertEquals(DI_ORDER_CREATED.value(), eventPayload.getEventsChain().get(eventPayload.getEventsChain().size() - 1));
+    assertEquals(DI_ORDER_CREATED.value(), eventPayload.getEventsChain().getLast());
     verifyPoLine(eventPayload);
     assertNull(getPurchaseOrderUpdates());
   }
@@ -277,7 +279,8 @@ public class OrderPostProcessingEventHandlerTest extends DiAbstractRestTest {
     createPieceAndTitle(poLine);
 
     DataImportEventPayload dataImportEventPayload = new DataImportEventPayload()
-      .withCurrentNode(profileSnapshotWrapper.getChildSnapshotWrappers().get(0).getChildSnapshotWrappers().get(0))
+      .withJobExecutionId(UUID.randomUUID().toString())
+      .withCurrentNode(profileSnapshotWrapper.getChildSnapshotWrappers().getFirst().getChildSnapshotWrappers().getFirst())
       .withEventType(DI_ORDER_CREATED_READY_FOR_POST_PROCESSING.value())
       .withTenant(TENANT_ID)
       .withOkapiUrl(OKAPI_URL)
@@ -302,11 +305,11 @@ public class OrderPostProcessingEventHandlerTest extends DiAbstractRestTest {
 
     // then
     DataImportEventPayload eventPayload = observeEvent(DI_COMPLETED.value());
-    assertEquals(DI_ORDER_CREATED.value(), eventPayload.getEventsChain().get(eventPayload.getEventsChain().size() - 1));
+    assertEquals(DI_ORDER_CREATED.value(), eventPayload.getEventsChain().getLast());
     verifyPoLine(eventPayload);
 
     List<JsonObject> updatedPoLines = MockServer.getRqRsEntries(HttpMethod.PUT, PO_LINES_STORAGE);
-    PoLine updatedPoLine = updatedPoLines.get(0).mapTo(PoLine.class);
+    PoLine updatedPoLine = updatedPoLines.getFirst().mapTo(PoLine.class);
     assertNull(updatedPoLine.getInstanceId());
 
     assertNull(getCreatedInstances());
@@ -315,7 +318,7 @@ public class OrderPostProcessingEventHandlerTest extends DiAbstractRestTest {
 
     List<JsonObject> ordersResp = getPurchaseOrderUpdates();
     assertFalse(ordersResp.isEmpty());
-    CompositePurchaseOrder openedOrder = ordersResp.get(0).mapTo(CompositePurchaseOrder.class);
+    CompositePurchaseOrder openedOrder = ordersResp.getFirst().mapTo(CompositePurchaseOrder.class);
     assertEquals(order.getId(), openedOrder.getId());
     assertEquals(WorkflowStatus.OPEN, openedOrder.getWorkflowStatus());
 
@@ -380,7 +383,8 @@ public class OrderPostProcessingEventHandlerTest extends DiAbstractRestTest {
     addMockEntry(JOB_PROFILE_SNAPSHOTS_MOCK, profileSnapshotWrapper);
 
     DataImportEventPayload dataImportEventPayload = new DataImportEventPayload()
-      .withCurrentNode(profileSnapshotWrapper.getChildSnapshotWrappers().get(0).getChildSnapshotWrappers().get(0))
+      .withJobExecutionId(UUID.randomUUID().toString())
+      .withCurrentNode(profileSnapshotWrapper.getChildSnapshotWrappers().getFirst().getChildSnapshotWrappers().getFirst())
       .withEventType(DI_ORDER_CREATED_READY_FOR_POST_PROCESSING.value())
       .withTenant(TENANT_ID)
       .withOkapiUrl(OKAPI_URL)
@@ -397,7 +401,7 @@ public class OrderPostProcessingEventHandlerTest extends DiAbstractRestTest {
 
     // then
     DataImportEventPayload eventPayload = observeEvent(DI_ERROR.value());
-    assertEquals(DI_ORDER_CREATED.value(), eventPayload.getEventsChain().get(eventPayload.getEventsChain().size() - 1));
+    assertEquals(DI_ORDER_CREATED.value(), eventPayload.getEventsChain().getLast());
   }
 
   @Test
@@ -407,7 +411,8 @@ public class OrderPostProcessingEventHandlerTest extends DiAbstractRestTest {
     addMockEntry(JOB_PROFILE_SNAPSHOTS_MOCK, profileSnapshotWrapper);
 
     DataImportEventPayload dataImportEventPayload = new DataImportEventPayload()
-      .withCurrentNode(profileSnapshotWrapper.getChildSnapshotWrappers().get(0).getChildSnapshotWrappers().get(0))
+      .withJobExecutionId(UUID.randomUUID().toString())
+      .withCurrentNode(profileSnapshotWrapper.getChildSnapshotWrappers().getFirst().getChildSnapshotWrappers().getFirst())
       .withEventType(DI_ORDER_CREATED_READY_FOR_POST_PROCESSING.value())
       .withTenant(TENANT_ID)
       .withOkapiUrl(OKAPI_URL)
@@ -425,7 +430,7 @@ public class OrderPostProcessingEventHandlerTest extends DiAbstractRestTest {
 
     // then
     DataImportEventPayload eventPayload = observeEvent(DI_ERROR.value());
-    assertEquals(DI_ORDER_CREATED.value(), eventPayload.getEventsChain().get(eventPayload.getEventsChain().size() - 1));
+    assertEquals(DI_ORDER_CREATED.value(), eventPayload.getEventsChain().getLast());
   }
 
   @Test
